--- a/index.html
+++ b/index.html
@@ -382,6 +382,9 @@
         <li data-lang="en" id="toonstorytime.me" data-owner="toonnongaeoy">
           <a href="https://toonstorytime.me">toonstorytime.me</a>
         </li>
+        <li data-lang="en" id="aumwp.com" data-owner="aumwp">
+          <a href="https://aumwp.com">aumwp.com</a>
+        </li>
       </ol>
 
       <div id="feed"></div>
